# AIAGENTS

./: .gitignore  README.md  pyproject.toml
BUGRAY/: config.py  main.py
BUGRAY/agent/: system_prompt.py
BUGRAY/agent/tools/: terminal.py
agent/: orchestrator.py
agent/tools/: __init__.py  filesystem.py
langgraph agent/: main.py  pyproject.toml
skillmatch-ai/: .gitignore  agent.py  main.py  pyproject.toml
telegram-bot/: .gitignore  main.py  pyproject.toml
