[project]
name = "testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.14.1",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.3",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "ollama>=0.6.2",
]
