[project]
name = "skillmatch-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.7.0",
    "groq>=1.4.0",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "requests>=2.34.2",
    "tavily-python>=0.7.25",
    "tiktoken>=0.13.0",
]
